--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,1 +1,48 @@
-<p>progress works!</p>
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-body">
+        <h3>Progress Page</h3>
+        <!-- ============================================================== -->
+        <!-- Start Progress bar -->
+        <!-- ============================================================== -->
+        <div class="progress">
+          <div class="progress-bar progress-bar-striped progress-bar-animated bg-info" role="progressbar"
+            [attr.ariaValuenow]="porcBarra1" aria-valuemin="0" aria-valuemax="100"
+            [style.width]="porcBarra1 + '%'"></div>
+        </div>
+        <br>
+        <div class="progress">
+            <div class="progress-bar progress-bar-striped progress-bar-animated bg-warning" role="progressbar"
+              [attr.ariaValuenow]="porcBarra2" aria-valuemin="0" aria-valuemax="100"
+              [style.width]="porcBarra2 + '%'"></div>
+          </div>
+        <!-- ============================================================== -->
+        <!-- End Progress bar -->
+        <!-- ============================================================== -->
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ============================================================== -->
+<!-- Start Cards -->
+<!-- ============================================================== -->
+<div class="row">
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador (cambioValor)="porcBarra1 = $event" leyenda="Progress Bar Azul" [progreso]="porcBarra1"></app-incrementador>
+      </div>
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="card">
+      <div class="card-body">
+        <app-incrementador (cambioValor)="porcBarra2 = $event" leyenda="Progress Bar Amarilla" [progreso]="porcBarra2"></app-incrementador>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- ============================================================== -->
+<!-- End Cards -->
+<!-- ============================================================== -->
